--- a/src/components/PlanFunerario.css
+++ b/src/components/PlanFunerario.css
@@ -653,7 +653,7 @@
     padding: 6rem 1rem;
     position: relative;
     overflow: hidden;
-    background-image: linear-gradient(to top, rgba(255, 255, 255, 0.6), rgba(255, 255, 255, 0.4)), url("https://placehold.co/1920x500/FAD0A8/594848?text=Fondo+Floral+Sutil");
+    background-image: linear-gradient(to top, rgba(255, 255, 255, 0.671), rgba(255, 255, 255, 0.4)), url("https://www.mapfre.com.pe/media/Clasico_Finisterre.jpg");
     background-size: cover;
     background-position: center;
     min-height: 400px;
